# skale.py

./: .gitignore  pyproject.toml  requirements.txt
src/pow/: anonymous.py  miner.py  wallet.py
src/utils/: web3_utils.py
tests/: test_anonymous.py  test_miner.py  test_send.py
